Model Registry step added, plus tags for pipeline steps

--- a/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
+++ b/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
@@ -17,7 +17,7 @@
     "8. [Workflow Automation with SageMaker Pipelines](#WorkflowAutomation)\n",
     "    1. [Pipeline Parameters](#PipelineParameters)\n",
     "    2. [Processing Step](#ProcessingStep)\n",
-    "    3. [Training and Model Creation Steps](#TrainingModelCreation)\n",
+    "    3. [Training, Model Creation, and Model Registry Steps](#TrainingModelCreation)\n",
     "    4. [Batch Scoring Step](#BatchScoringStep)\n",
     "    5. [Creating and executing the pipeline](#CreatingExecutingPipeline)\n",
     "9. [ML Lineage Tracking](#LineageOfPipelineArtifacts)\n",
@@ -793,7 +793,8 @@
     "    instance_count=processing_instance_count,\n",
     "    base_job_name=\"tf-2-workflow-process\",\n",
     "    sagemaker_session=sess,\n",
-    "    role=role )"
+    "    role=role,\n",
+    "    tags=processing_tags)"
    ]
   },
   {
@@ -823,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training and Model Creation Steps <a class=\"anchor\" id=\"TrainingModelCreation\">\n",
+    "### Training, Model Creation, and Model Registry Steps <a class=\"anchor\" id=\"TrainingModelCreation\">\n",
     "\n",
     "The following code sets up a pipeline step for a training job. As mentioned above, the pipeline is parameterized to specify which SageMaker prebuilt TensorFlow 2 training container to use for the job.  As newer TensorFlow versions are released, the pipeline can be re-executed with the newer versions simply by updating the parameter."
    ]
@@ -870,6 +871,7 @@
     "    image_uri=image_uri_train,\n",
     "    git_config=git_config,\n",
     "    metric_definitions=training_metrics,\n",
+    "    tags=training_tags,\n",
     "    source_dir='tf-2-workflow-smpipelines/train_model',\n",
     "    entry_point='train.py',\n",
     "    instance_type=training_instance_type,\n",
@@ -908,7 +910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As another step, we create a SageMaker `Model` object to wrap the model artifact, and associate it with a separate SageMaker prebuilt TensorFlow Serving inference container to potentially use later, for example in a SageMaker hosted endpoint."
+    "We'll also create a SageMaker `Model` object to wrap the model artifact, and associate it with a separate SageMaker prebuilt TensorFlow Serving inference container to potentially use later.  For example, the `Model` could be used with SageMaker Batch Transform."
    ]
   },
   {
@@ -941,6 +943,33 @@
     "    name=\"TF2WorkflowCreateModel\",\n",
     "    model=model,\n",
     "    inputs=inputs_model )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a further step, we also can register the model in the SageMaker Model Registry for improved model governance.  For example, with Model Registry you can catalog models for production, manage model versions, and associate metadata with models.  Model Registry also can be used as part of a CI/CD workflow for model deployment to SageMaker Endpoints.  By default, each time this pipeline is executed, a new model version will be registered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.workflow.step_collections import RegisterModel\n",
+    "\n",
+    "step_register = RegisterModel(\n",
+    "    name=\"TF2WorkflowRegisterModel\",\n",
+    "    estimator=estimator,\n",
+    "    model_data=step_train.properties.ModelArtifacts.S3ModelArtifacts,\n",
+    "    content_types=[\"text/csv\"],\n",
+    "    response_types=[\"text/csv\"],\n",
+    "    inference_instances=[\"ml.m5.xlarge\"],\n",
+    "    transform_instances=[\"ml.c5.xlarge\"],\n",
+    "    model_package_group_name=\"TF2WorkflowModelPackageGroup\",\n",
+    "    image_uri=image_uri_inference)"
    ]
   },
   {
@@ -1004,13 +1033,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "batch_scoring_tags = [{'Key': 'cost-center', 'Value': 'TF2WorkflowBatchScoring'}]\n",
     "batch_scorer = SKLearnProcessor(\n",
     "                    framework_version=sklearn_version.default_value,\n",
     "                    instance_type=batch_instance_type,\n",
     "                    instance_count=batch_instance_count,\n",
     "                    base_job_name=\"tf-2-workflow-batch\",\n",
     "                    sagemaker_session=sess,\n",
-    "                    role=role )\n",
+    "                    role=role,\n",
+    "                    tags=batch_scoring_tags)\n",
     "\n",
     "step_batch = ProcessingStep(\n",
     "                    name=\"TF2WorkflowBatchScoring\",\n",
@@ -1066,6 +1097,7 @@
     "    steps=[step_process, \n",
     "           step_train, \n",
     "           step_create_model,\n",
+    "           step_register,\n",
     "           step_batch\n",
     "          ],\n",
     "    pipeline_experiment_config=PipelineExperimentConfig(\"TF2WorkflowExperiment\", ExecutionVariables.PIPELINE_EXECUTION_ID),\n",
@@ -1106,6 +1138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture output\n",
     "pipeline.upsert(role_arn=role)\n",
     "execution = pipeline.start()"
    ]
