overall Pipeline tagging added

--- a/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
+++ b/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
@@ -1129,7 +1129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After upserting its definition, we can start the pipeline with the `Pipeline` object's `start` method:"
+    "Next we upsert the pipeline definition.  Using the `upsert` method allows us to modify the pipeline definition as needed for each execution.  Note that we also can apply tags to the pipeline for cost attribution and other purposes.  These tags will be propagated to pipeline steps.  We can start the pipeline with the `Pipeline` object's `start` method:"
    ]
   },
   {
@@ -1139,7 +1139,8 @@
    "outputs": [],
    "source": [
     "%%capture output\n",
-    "pipeline.upsert(role_arn=role)\n",
+    "pipeline_tags = [{'Key': 'pipeline-type', 'Value': 'TF2WorkflowPipeline'}]\n",
+    "pipeline.upsert(role_arn=role, tags=pipeline_tags)\n",
     "execution = pipeline.start()"
    ]
   },
