Updated the generation of preprocessor.py
`fit_transform` now takes the y data set preventing downstream errors

--- a/tf-2-workflow/tf-2-workflow.ipynb
+++ b/tf-2-workflow/tf-2-workflow.ipynb
@@ -121,6 +121,14 @@
     "    print('\\nINPUT FILE LIST: \\n{}\\n'.format(input_files))\n",
     "    scaler = StandardScaler()\n",
     "    for file in input_files:\n",
+    "        if 'x_' in file:\n",
+    "            X = file\n",
+    "        elif 'y_' in file:\n",
+    "            y = file\n",
+    "    raw_x = np.load(X)\n",
+    "    raw_y = np.load(y)\n",
+    "    transformed = scaler.fit_transform(raw_x, raw_y)\n",
+    "    for file in input_files:\n",
     "        raw = np.load(file)\n",
     "        transformed = scaler.fit_transform(raw)\n",
     "        if 'train' in file:\n",
