--- a/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
+++ b/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "#### SageMaker Pipelines Lambda Step and Hugging Face\n",
     "\n",
-    "This notebook demonstrates how to use [SageMaker Pipelines](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) to train and deploy a [Hugging Face](https://docs.aws.amazon.com/sagemaker/latest/dg/hugging-face.html) transformer using a Lambda function invoked by SageMaker Pipelines Lambda Step. "
+    "This notebook demonstrates how to use [SageMaker Pipelines](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) to train and deploy a [Hugging Face](https://docs.aws.amazon.com/sagemaker/latest/dg/hugging-face.html) transformer using a Lambda function invoked by SageMaker Pipelines Lambda Step. \n",
+    "\n",
+    "Prerequisites:  \n",
+    "- Make sure your notebook environment has IAM managed policy `AmazonSageMakerPipelinesIntegrations` as well as `AmazonSageMakerFullAccess`\n",
+    "- For SageMaker Studio, use the kernel `Python 3 (Data Science)`\n",
+    "\n",
+    "We'll start with some necessary imports."
    ]
   },
   {
@@ -56,13 +62,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll perform some setup for SageMaker."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the SageMaker Session\n",
-    "\n",
     "region = sagemaker.Session().boto_region_name\n",
     "sm_client = boto3.client(\"sagemaker\")\n",
     "boto_session = boto3.Session(region_name=region)\n",
@@ -78,6 +89,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Parameters\n",
+    "\n",
+    "Before defining the pipeline, it is important to parameterize it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -85,7 +105,7 @@
    "source": [
     "# processing step parameters\n",
     "processing_instance_type = ParameterString(\n",
-    "    name=\"ProcessingInstanceType\", default_value=\"ml.m5.xlarge\"\n",
+    "    name=\"ProcessingInstanceType\", default_value=\"ml.c5.2xlarge\"\n",
     ")\n",
     "processing_instance_count = ParameterInteger(\n",
     "    name=\"ProcessingInstanceCount\", default_value=1\n",
@@ -106,7 +126,7 @@
     "\n",
     "output_destination = \"s3://{}/{}/data\".format(bucket, s3_prefix)\n",
     "\n",
-    "cache_config = CacheConfig(enable_caching=True, expire_after=\"30d\")\n",
+    "cache_config = CacheConfig(enable_caching=False, expire_after=\"30d\")\n",
     "\n",
     "model_package_group_name = \"HuggingFaceModelPackageGroup\""
    ]
@@ -166,7 +186,9 @@
    "source": [
     "#### Create the Hugging Face Estimator\n",
     "\n",
-    "Use SageMaker's [Hugging Face](https://sagemaker.readthedocs.io/en/stable/frameworks/huggingface/sagemaker.huggingface.html) Estimator class to create train the Hugging Face [BERT](https://huggingface.co/distilbert-base-uncased) model"
+    "Use SageMaker's [Hugging Face](https://sagemaker.readthedocs.io/en/stable/frameworks/huggingface/sagemaker.huggingface.html) Estimator class to create train the Hugging Face [BERT](https://huggingface.co/distilbert-base-uncased) model.\n",
+    "\n",
+    "In the cell below, replace the container URI with the one for your region, as found in the table https://github.com/aws/deep-learning-containers/blob/master/available_images.md.  "
    ]
   },
   {
@@ -175,8 +197,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "container = \"763104351884.dkr.ecr.us-east-2.amazonaws.com/huggingface-pytorch-training:1.7.1-transformers4.6.1-gpu-py36-cu110-ubuntu18.04\"\n",
+    "'''\n",
+    "container = sagemaker.image_uris.retrieve(\n",
+    "                                        framework=\"huggingface\",\n",
+    "                                        region=boto3.Session().region_name,\n",
+    "                                        version=\"4.6.1\",\n",
+    "                                        py_version=\"py36\",\n",
+    "                                        base_framework_version=\"pytorch1.7.1\",\n",
+    "                                        instance_type=\"ml.p3.2xlarge\",\n",
+    "                                        image_scope=\"training\" )\n",
+    "'''\n",
     "\n",
+    "container = '763104351884.dkr.ecr.us-west-2.amazonaws.com/huggingface-pytorch-training:1.7.1-transformers4.6.1-gpu-py36-cu110-ubuntu18.04' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hyperparameters = {\n",
     "    \"epochs\": 1,\n",
     "    \"train_batch_size\": 32,\n",
@@ -306,8 +346,8 @@
     "step_register = RegisterModel(\n",
     "    name=\"HuggingFaceRegisterModel\",\n",
     "    model=model,\n",
-    "    content_types=[\"text/x-libsvm\"],\n",
-    "    response_types=[\"text/x-libsvm\"],\n",
+    "    content_types=[\"application/json\"],\n",
+    "    response_types=[\"application/json\"],\n",
     "    inference_instances=[\"ml.g4dn.xlarge\", \"ml.m4.xlarge\"],\n",
     "    transform_instances=[\"ml.g4dn.xlarge\", \"ml.m4.xlarge\"],\n",
     "    model_package_group_name=model_package_group_name,\n",
@@ -396,7 +436,7 @@
     "\n",
     "from iam_helper import create_lambda_role\n",
     "\n",
-    "lambda_role = create_lambda_role(\"lambda-deployment-role\")"
+    "lambda_role = create_lambda_role(\"lambda-deployment-role\") "
    ]
   },
   {
@@ -542,6 +582,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Prediction\n",
+    "\n",
+    "After the previous cell completes, you can check whether the endpoint has finished deploying.  In SageMaker Studio, click on the tilted triange icon in the left toolbar, then select **Endpoints** in the drop down menu.  In the list of endpoints, click on the one with the name beginning `demo-hf-endpoint`, then click on **AWS settings**.  When the Status becomes InService, you can run the following code cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.deserializers import JSONDeserializer\n",
+    "from sagemaker.serializers import JSONSerializer\n",
+    "\n",
+    "hf_predictor = sagemaker.predictor.Predictor(endpoint_name, \n",
+    "                                             sagemaker_session=sagemaker_session,\n",
+    "                                             serializer=JSONSerializer(),\n",
+    "                                             deserializer=JSONDeserializer() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentiment_input1 = {\"inputs\":\"Although the movie had some plot weaknesses, it was engaging. Special effects were mind boggling.\"}\n",
+    "\n",
+    "hf_predictor.predict(sentiment_input1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentiment_input2 = {\"inputs\":\"There was some good acting, but the story was ridiculous. The other sequels in this franchise were better.\"}\n",
+    "\n",
+    "hf_predictor.predict(sentiment_input2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Cleanup Resources\n",
     "\n",
     "The following cell will delete the resources created by the Lambda function and the Lambda itself. \n",
@@ -573,7 +659,7 @@
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-2:429704687514:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-west-2:236514542706:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
