Updated code with async inference

--- a/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
+++ b/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
@@ -395,6 +395,8 @@
     "    endpoint_config_name = event[\"endpoint_config_name\"]\n",
     "    endpoint_name = event[\"endpoint_name\"]\n",
     "    role = event[\"role\"]\n",
+    "    bucket = event[\"bucket\"]\n",
+    "    s3_prefix = event[\"s3_prefix\"]\n",
     "\n",
     "    container = {\"ModelPackageName\": model_package_arn}\n",
     "\n",
@@ -406,13 +408,20 @@
     "        EndpointConfigName=endpoint_config_name,\n",
     "        ProductionVariants=[\n",
     "            {\n",
-    "                \"InstanceType\": \"ml.m4.xlarge\",\n",
-    "                \"InitialVariantWeight\": 1,\n",
-    "                \"InitialInstanceCount\": 1,\n",
+    "                \"VariantName\": \"variant1\",\n",
     "                \"ModelName\": model_name,\n",
-    "                \"VariantName\": \"AllTraffic\",\n",
+    "                \"InstanceType\": \"ml.m5.xlarge\",\n",
+    "                \"InitialInstanceCount\": 1\n",
     "            }\n",
     "        ],\n",
+    "        AsyncInferenceConfig={\n",
+    "            \"OutputConfig\": {\n",
+    "                \"S3OutputPath\": f\"s3://{s3_bucket}/{s3_prefix}/output\",\n",
+    "            },\n",
+    "            \"ClientConfig\": {\n",
+    "                \"MaxConcurrentInvocationsPerInstance\": 4\n",
+    "            }\n",
+    "        }\n",
     "    )\n",
     "\n",
     "    create_endpoint_response = sm_client.create_endpoint(\n",
@@ -466,7 +475,7 @@
     "    memory_size=10240,\n",
     ")\n",
     "\n",
-    "# The dictionary retured by the Lambda function is captured by LambdaOutput, each key in the dictionary corresponds to a\n",
+    "# The dictionary retured by the Lambda function is captured by LambdaOutput, each key in the dictionary corresponds to a \n",
     "# LambdaOutput\n",
     "\n",
     "output_param_1 = LambdaOutput(\n",
@@ -479,7 +488,7 @@
     "    output_name=\"other_key\", output_type=LambdaOutputTypeEnum.String\n",
     ")\n",
     "\n",
-    "# The inputs provided to the Lambda function can be retrieved via the `event` object within the `lambda_handler` function\n",
+    "# The inputs provided to the Lambda function can be retrieved via the `event` object within the `lambda_handler` function \n",
     "# in the Lambda\n",
     "step_deploy_lambda = LambdaStep(\n",
     "    name=\"LambdaStepHuggingFaceDeploy\",\n",
@@ -490,6 +499,8 @@
     "        \"endpoint_name\": endpoint_name,\n",
     "        \"model_package_arn\": step_register.steps[0].properties.ModelPackageArn,\n",
     "        \"role\": role,\n",
+    "        \"bucket\": bucket,\n",
+    "        \"s3_prefix\": s3_prefix\n",
     "    },\n",
     "    outputs=[output_param_1, output_param_2, output_param_3],\n",
     ")"
