clarify endpoint type and usage

--- a/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
+++ b/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### SageMaker Pipelines Lambda Step and Hugging Face\n",
+    "# SageMaker Pipelines Lambda Step and Hugging Face\n",
     "\n",
     "This notebook demonstrates how to use [SageMaker Pipelines](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) to train and deploy a [Hugging Face](https://docs.aws.amazon.com/sagemaker/latest/dg/hugging-face.html) transformer using a Lambda function invoked by SageMaker Pipelines Lambda Step. \n",
     "\n",
@@ -12,7 +12,17 @@
     "- Make sure your notebook environment has IAM managed policy `AmazonSageMakerPipelinesIntegrations` as well as `AmazonSageMakerFullAccess`\n",
     "- For SageMaker Studio, use the kernel `Python 3 (Data Science)`\n",
     "\n",
-    "We'll start with some necessary imports."
+    "We'll start by updating the SageMaker SDK, and importing some necessary packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install sagemaker --quiet --upgrade"
    ]
   },
   {
@@ -92,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Parameters\n",
+    "## Parameterizing the pipeline\n",
     "\n",
     "Before defining the pipeline, it is important to parameterize it."
    ]
@@ -126,7 +136,7 @@
     "\n",
     "output_destination = \"s3://{}/{}/data\".format(bucket, s3_prefix)\n",
     "\n",
-    "cache_config = CacheConfig(enable_caching=False, expire_after=\"30d\")\n",
+    "cache_config = CacheConfig(enable_caching=True, expire_after=\"30d\")\n",
     "\n",
     "model_package_group_name = \"HuggingFaceModelPackageGroup\""
    ]
@@ -135,9 +145,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Preparation\n",
+    "## Data preparation step\n",
     "\n",
-    "The SKLearn Processing is used to invoke a SageMaker Processing job with a custom python script - `preprocessing.py`. "
+    "A SKLearn Processing step is used to invoke a SageMaker Processing job with a custom python script - `preprocessing.py`. "
    ]
   },
   {
@@ -184,11 +194,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create the Hugging Face Estimator\n",
+    "## Model training with the SageMaker Hugging Face Estimator\n",
     "\n",
-    "Use SageMaker's [Hugging Face](https://sagemaker.readthedocs.io/en/stable/frameworks/huggingface/sagemaker.huggingface.html) Estimator class to create train the Hugging Face [BERT](https://huggingface.co/distilbert-base-uncased) model.\n",
+    "Use SageMaker's [Hugging Face](https://sagemaker.readthedocs.io/en/stable/frameworks/huggingface/sagemaker.huggingface.html) Estimator class to create a model training step for the Hugging Face [BERT](https://huggingface.co/distilbert-base-uncased) model.\n",
     "\n",
-    "In the cell below, replace the container URI with the one for your region, as found in the table https://github.com/aws/deep-learning-containers/blob/master/available_images.md.  "
+    "In the cell below, ***REPLACE THE CONTAINER URI*** with the one for your AWS Region, as found in the table https://github.com/aws/deep-learning-containers/blob/master/available_images.md.  "
    ]
   },
   {
@@ -197,17 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "container = sagemaker.image_uris.retrieve(\n",
-    "                                        framework=\"huggingface\",\n",
-    "                                        region=boto3.Session().region_name,\n",
-    "                                        version=\"4.6.1\",\n",
-    "                                        py_version=\"py36\",\n",
-    "                                        base_framework_version=\"pytorch1.7.1\",\n",
-    "                                        instance_type=\"ml.p3.2xlarge\",\n",
-    "                                        image_scope=\"training\" )\n",
-    "'''\n",
-    "\n",
+    "# NOTE:  FOR REGIONS OTHER THAN US-WEST-2 (OREGON), REPLACE THIS URI WITH ONE FROM THE TABLE LINKED ABOVE !!!!\n",
     "container = '763104351884.dkr.ecr.us-west-2.amazonaws.com/huggingface-pytorch-training:1.7.1-transformers4.6.1-gpu-py36-cu110-ubuntu18.04' "
    ]
   },
@@ -268,11 +268,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model Evaluation\n",
+    "## Model evaluation step\n",
     "\n",
-    "A ProcessingStep is used to evaluate the performance of the trained model. Based on the results of the evaluation, the model is created and deployed.\n",
+    "A ProcessingStep is used to evaluate the performance of the trained model. Based on the results of the evaluation, either the model is created, registered, and deployed, or the pipeline stops.\n",
     "\n",
-    "In the training job, the model was evaluated against the test dataset, the result of the evaluation was stored in the `model.tar.gz` file saved by the training job, the results of that evaluation are copied into a `PropertyFile` in this ProcessingStep so that it can be used in the ConditionStep. "
+    "In the training job, the model was evaluated against the test dataset, and the result of the evaluation was stored in the `model.tar.gz` file saved by the training job.  The results of that evaluation are copied into a `PropertyFile` in this ProcessingStep so that it can be used in the ConditionStep. "
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Register the model\n",
+    "## Register the model\n",
     "\n",
     "The trained model is registered into the Model Registry under a Model Package Group. The model is registered in the \"Approved\" state so that it can be deployed by the Lambda function. Registration will only happen if the output of the ConditionStep is true, i.e, the metrics being checked are within the threshold defined."
    ]
@@ -359,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Lambda Step\n",
+    "## Lambda step for model deployment\n",
     "\n",
     "The SageMaker SDK provides a Lambda helper class that can be used to create a Lambda function. This function is provided to the LambdaStep for invocation via the Pipeline. Alternatively, a pre-defined Lambda function can be provided to the LambdaStep. \n",
     "\n",
@@ -496,6 +496,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Condition for deployment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -522,13 +529,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline definition and execution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline = Pipeline(\n",
-    "    name=f\"HuggingFaceDemoPipeline\" + \"-\" + current_time,\n",
+    "    name=f\"HuggingFaceDemoPipeline\",\n",
     "    parameters=[\n",
     "        processing_instance_type,\n",
     "        processing_instance_count,\n",
@@ -582,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prediction\n",
+    "## Prediction \n",
     "\n",
     "After the previous cell completes, you can check whether the endpoint has finished deploying.  In SageMaker Studio, click on the tilted triange icon in the left toolbar, then select **Endpoints** in the drop down menu.  In the list of endpoints, click on the one with the name beginning `demo-hf-endpoint`, then click on **AWS settings**.  When the Status becomes InService, you can run the following code cells."
    ]
@@ -608,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment_input1 = {\"inputs\":\"Although the movie had some plot weaknesses, it was engaging. Special effects were mind boggling.\"}\n",
+    "sentiment_input1 = {\"inputs\":\"Although the movie had some plot weaknesses, it was engaging. Special effects were mind boggling.  Can't wait to see what this creative team does next.\"}\n",
     "\n",
     "hf_predictor.predict(sentiment_input1)"
    ]
@@ -619,7 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment_input2 = {\"inputs\":\"There was some good acting, but the story was ridiculous. The other sequels in this franchise were better.\"}\n",
+    "sentiment_input2 = {\"inputs\":\"There was some good acting, but the story was ridiculous. The other sequels in this franchise were better.  It's time to take a break from this IP, but if they switch it up for the next one, I'll check it out.\"}\n",
     "\n",
     "hf_predictor.predict(sentiment_input2)"
    ]
@@ -628,7 +642,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cleanup Resources\n",
+    "NOTE: the code in this notebook is for real time (synchronous) rather than asynchronous endpoints.  To deploy an asynchronous endpoint, use the AWS console to create a Lambda function with a layer that includes the latest version of boto3.  In the Lambda helper function, supply the ARN of this function rather than the script defined above.  The Lambda step definition itself needs a couple of additional inputs, as shown below, for the S3 bucket and prefix.\n",
+    "\n",
+    "```python\n",
+    "step_deploy_lambda = LambdaStep(\n",
+    "    name=\"LambdaStepHuggingFaceDeploy\",\n",
+    "    lambda_func=func,\n",
+    "    inputs={\n",
+    "        \"model_name\": model_name,\n",
+    "        \"endpoint_config_name\": endpoint_config_name,\n",
+    "        \"endpoint_name\": endpoint_name,\n",
+    "        \"model_package_arn\": step_register.steps[0].properties.ModelPackageArn,\n",
+    "        \"role\": role,\n",
+    "        \"bucket\": bucket,\n",
+    "        \"s3_prefix\": s3_prefix\n",
+    "    },\n",
+    "    outputs=[output_param_1, output_param_2, output_param_3] )\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Lambda function script to upload in the console is similar to the one in the lambda_deployer.py script above, with the following modified handler function.  The primary modifications are adding references to the S3 bucket and prefix, and an `AsyncInferenceConfig` to indicate that an asynchronous endpoint is desired and to specify its parameters.\n",
+    "\n",
+    "```python\n",
+    "def lambda_handler(event, context):\n",
+    "    \"\"\" \"\"\"\n",
+    "    sm_client = boto3.client(\"sagemaker\")\n",
+    "\n",
+    "    # The name of the model created in the Pipeline CreateModelStep\n",
+    "    model_name = event[\"model_name\"]\n",
+    "    model_package_arn = event[\"model_package_arn\"]\n",
+    "    endpoint_config_name = event[\"endpoint_config_name\"]\n",
+    "    endpoint_name = event[\"endpoint_name\"]\n",
+    "    role = event[\"role\"]\n",
+    "    bucket = event[\"bucket\"]\n",
+    "    s3_prefix = event[\"s3_prefix\"]\n",
+    "    container = {\"ModelPackageName\": model_package_arn}\n",
+    "    create_model_respose = sm_client.create_model(ModelName=model_name, ExecutionRoleArn=role, Containers=[container] )\n",
+    "\n",
+    "    create_endpoint_config_response = sm_client.create_endpoint_config(\n",
+    "        EndpointConfigName=endpoint_config_name,\n",
+    "        ProductionVariants=[\n",
+    "            {\n",
+    "                \"InstanceType\": \"ml.m5.xlarge\",\n",
+    "                \"InitialVariantWeight\": 1,\n",
+    "                \"InitialInstanceCount\": 1,\n",
+    "                \"ModelName\": model_name,\n",
+    "                \"VariantName\": \"AllTraffic\",\n",
+    "            }\n",
+    "        ],\n",
+    "        AsyncInferenceConfig={\n",
+    "            \"OutputConfig\": {\n",
+    "                \"S3OutputPath\": f\"s3://{bucket}/{s3_prefix}/output\",\n",
+    "            },\n",
+    "            \"ClientConfig\": {\n",
+    "                \"MaxConcurrentInvocationsPerInstance\": 4\n",
+    "            },\n",
+    "        },\n",
+    "    )\n",
+    "\n",
+    "    create_endpoint_response = sm_client.create_endpoint(EndpointName=endpoint_name, EndpointConfigName=endpoint_config_name)\n",
+    "    return {\n",
+    "        \"statusCode\": 200,\n",
+    "        \"body\": json.dumps(\"Created Endpoint!\"),\n",
+    "        \"other_key\": \"example_value\",\n",
+    "    }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleanup Resources\n",
     "\n",
     "The following cell will delete the resources created by the Lambda function and the Lambda itself. \n",
     "Deleting other resources such as the S3 bucket and the IAM role for the Lambda function are the responsibility of the notebook user. "
