--- a/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
+++ b/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SageMaker Pipelines Lambda Step and Hugging Face\n",
+    "# SageMaker Pipelines: train a Hugging Face model, deploy it with a Lambda step  \n",
     "\n",
-    "This notebook demonstrates how to use [SageMaker Pipelines](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) to train and deploy a [Hugging Face](https://docs.aws.amazon.com/sagemaker/latest/dg/hugging-face.html) transformer using a Lambda function invoked by SageMaker Pipelines Lambda Step. \n",
+    "This notebook demonstrates how to use [SageMaker Pipelines](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-sdk.html) to train a [Hugging Face](https://docs.aws.amazon.com/sagemaker/latest/dg/hugging-face.html) NLP model and deploy it using a Lambda function invoked by a SageMaker Pipelines Lambda step. The SageMaker integration with Hugging Face makes it easy to train and deploy advanced NLP models.  A Lambda step in SageMaker Pipelines enables you to easily do lightweight model deployments and other serverless operations.\n",
     "\n",
-    "Prerequisites:  \n",
+    "In this example use case, the Hugging Face model is trained on the IMDb movie reviews dataset.  The goal is to predict the sentiment of the movie review (positive or negative).  The pipeline built in this notebook covers the full end-to-end workflow, from preparing the dataset, to model training, evaluation, registration (if model quality passes a test), and deployment.\n",
+    "\n",
+    "**Prerequisites**:  \n",
     "- Make sure your notebook environment has IAM managed policy `AmazonSageMakerPipelinesIntegrations` as well as `AmazonSageMakerFullAccess`\n",
     "- For SageMaker Studio, use the kernel `Python 3 (Data Science)`\n",
     "\n",
@@ -104,7 +106,7 @@
    "source": [
     "## Parameterizing the pipeline\n",
     "\n",
-    "Before defining the pipeline, it is important to parameterize it."
+    "Before defining the pipeline, it is important to parameterize it.  Almost any aspect of a SageMaker Pipeline can be parameterized, including instance types and counts."
    ]
   },
   {
@@ -114,30 +116,18 @@
    "outputs": [],
    "source": [
     "# processing step parameters\n",
-    "processing_instance_type = ParameterString(\n",
-    "    name=\"ProcessingInstanceType\", default_value=\"ml.c5.2xlarge\"\n",
-    ")\n",
-    "processing_instance_count = ParameterInteger(\n",
-    "    name=\"ProcessingInstanceCount\", default_value=1\n",
-    ")\n",
+    "processing_instance_type = ParameterString(name=\"ProcessingInstanceType\", default_value=\"ml.c5.2xlarge\")\n",
+    "processing_instance_count = ParameterInteger(name=\"ProcessingInstanceCount\", default_value=1)\n",
     "\n",
     "# training step parameters\n",
-    "training_instance_type = ParameterString(\n",
-    "    name=\"TrainingInstanceType\", default_value=\"ml.p3.2xlarge\"\n",
-    ")\n",
-    "training_instance_count = ParameterInteger(\n",
-    "    name=\"TrainingInstanceCount\", default_value=1\n",
-    ")\n",
+    "training_instance_type = ParameterString(name=\"TrainingInstanceType\", default_value=\"ml.p3.2xlarge\")\n",
+    "training_instance_count = ParameterInteger(name=\"TrainingInstanceCount\", default_value=1)\n",
     "\n",
     "# endpoint parameters\n",
-    "endpoint_instance_type = ParameterString(\n",
-    "    name=\"EndpointInstanceType\", default_value=\"ml.g4dn.xlarge\"\n",
-    ")\n",
+    "endpoint_instance_type = ParameterString(name=\"EndpointInstanceType\", default_value=\"ml.g4dn.xlarge\")\n",
     "\n",
     "output_destination = \"s3://{}/{}/data\".format(bucket, s3_prefix)\n",
-    "\n",
-    "cache_config = CacheConfig(enable_caching=True, expire_after=\"30d\")\n",
-    "\n",
+    "cache_config = CacheConfig(enable_caching=False, expire_after=\"30d\")\n",
     "model_package_group_name = \"HuggingFaceModelPackageGroup\""
    ]
   },
@@ -196,9 +186,9 @@
    "source": [
     "## Model training with the SageMaker Hugging Face Estimator\n",
     "\n",
-    "Use SageMaker's [Hugging Face](https://sagemaker.readthedocs.io/en/stable/frameworks/huggingface/sagemaker.huggingface.html) Estimator class to create a model training step for the Hugging Face [BERT](https://huggingface.co/distilbert-base-uncased) model.\n",
+    "Use SageMaker's [Hugging Face](https://sagemaker.readthedocs.io/en/stable/frameworks/huggingface/sagemaker.huggingface.html) Estimator class to create a model training step for the Hugging Face [DistilBERT](https://huggingface.co/distilbert-base-uncased) model.  Transformer-based models such as the original BERT can be very large and slow to train.  DistilBERT, however, is a small, fast, cheap and light Transformer model trained by distilling BERT base. It reduces the size of a BERT model by 40%, while retaining 97% of its language understanding capabilities and being 60% faster. \n",
     "\n",
-    "In the cell below, ***REPLACE THE CONTAINER URI*** with the one for your AWS Region, as found in the table https://github.com/aws/deep-learning-containers/blob/master/available_images.md.  "
+    "In the cell below, ***REPLACE THE PREFIX OF THE CONTAINER URI*** with the one for your AWS Region, as found in the table https://github.com/aws/deep-learning-containers/blob/master/available_images.md.  In other words, if you're not running this notebook in the us-west-2 (Oregon) region, replace only the following portion of the URI:  `763104351884.dkr.ecr.us-west-2.amazonaws.com`."
    ]
   },
   {
@@ -212,15 +202,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Besides the container specified above, the Hugging Face estimator also takes hyperparameters as a dictionary.  The training instance type and size are pipeline parameters that can be easily varied in future pipeline runs without changing any code.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "hyperparameters = {\n",
-    "    \"epochs\": 1,\n",
-    "    \"train_batch_size\": 32,\n",
     "    \"model_name\": \"distilbert-base-uncased\",\n",
+    "    \"train_batch_size\": 32,\n",
+    "    \"epochs\": 1,\n",
     "}\n",
     "\n",
     "estimator = HuggingFace(\n",
@@ -292,7 +289,7 @@
     ")\n",
     "\n",
     "evaluation_report = PropertyFile(\n",
-    "    name=\"AbaloneEvaluationReport\",\n",
+    "    name=\"HuggingFaceEvaluationReport\",\n",
     "    output_name=\"evaluation\",\n",
     "    path=\"evaluation.json\",\n",
     ")\n",
@@ -325,7 +322,7 @@
    "source": [
     "## Register the model\n",
     "\n",
-    "The trained model is registered into the Model Registry under a Model Package Group. The model is registered in the \"Approved\" state so that it can be deployed by the Lambda function. Registration will only happen if the output of the ConditionStep is true, i.e, the metrics being checked are within the threshold defined."
+    "The trained model is registered in the Model Registry under a Model Package Group. Each time a new model is registered, it is given a new version number by default.  The model is registered in the \"Approved\" state so that it can be deployed by the Lambda function. Registration will only happen if the output of the ConditionStep is true, i.e, the metrics being checked are within the threshold defined."
    ]
   },
   {
@@ -348,8 +345,8 @@
     "    model=model,\n",
     "    content_types=[\"application/json\"],\n",
     "    response_types=[\"application/json\"],\n",
-    "    inference_instances=[\"ml.g4dn.xlarge\", \"ml.m4.xlarge\"],\n",
-    "    transform_instances=[\"ml.g4dn.xlarge\", \"ml.m4.xlarge\"],\n",
+    "    inference_instances=[\"ml.g4dn.xlarge\", \"ml.m5.xlarge\"],\n",
+    "    transform_instances=[\"ml.g4dn.xlarge\", \"ml.m5.xlarge\"],\n",
     "    model_package_group_name=model_package_group_name,\n",
     "    approval_status=\"Approved\",\n",
     ")"
@@ -361,11 +358,11 @@
    "source": [
     "## Lambda step for model deployment\n",
     "\n",
-    "The SageMaker SDK provides a Lambda helper class that can be used to create a Lambda function. This function is provided to the LambdaStep for invocation via the Pipeline. Alternatively, a pre-defined Lambda function can be provided to the LambdaStep. \n",
+    "The SageMaker SDK provides a Lambda helper class that can be used to create a Lambda function. This function is provided to the Lambda step for invocation via the pipeline. Alternatively, a predefined Lambda function can be provided to the Lambda step. \n",
     "\n",
-    "The SageMaker Execution Role requires the policy `AmazonSageMakerPipelinesIntegrations` to create the Lambda function and the Lambda function needs a role with policies for creating a SageMaker endpoint. \n",
+    "The SageMaker Execution Role requires the policy `AmazonSageMakerPipelinesIntegrations` to create the Lambda function, and the Lambda function needs a role with policies allowing creation of a SageMaker endpoint. \n",
     "\n",
-    "A helper function in `iam_helper.py` is provided to create the Lambda role, the use the script, the notebook execution role must the required policy to create a role. "
+    "A helper function in `iam_helper.py` is provided to create the Lambda role. To use the script, the notebook execution role must include the required policy to create an IAM role. "
    ]
   },
   {
@@ -406,7 +403,7 @@
     "        EndpointConfigName=endpoint_config_name,\n",
     "        ProductionVariants=[\n",
     "            {\n",
-    "                \"InstanceType\": \"ml.m4.xlarge\",\n",
+    "                \"InstanceType\": \"ml.m5.xlarge\",\n",
     "                \"InitialVariantWeight\": 1,\n",
     "                \"InitialInstanceCount\": 1,\n",
     "                \"ModelName\": model_name,\n",
@@ -427,16 +424,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create an IAM role using the `iam_helper` script or provide an existing IAM role to be used by the Lambda function\n",
-    "\n",
-    "from iam_helper import create_lambda_role\n",
-    "\n",
-    "lambda_role = create_lambda_role(\"lambda-deployment-role\") "
+    "The following code creates an IAM role using the `iam_helper` script.  Alternatively, you could provide an existing IAM role to be used by the Lambda function."
    ]
   },
   {
@@ -445,15 +436,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the Lambda Step\n",
+    "from iam_helper import create_lambda_role\n",
     "\n",
+    "lambda_role = create_lambda_role(\"lambda-deployment-role\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we define the Lambda step.  After defining some object names, we use the Lambda helper class to create the actual Lambda function, then pass it to the Lambda step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Use the current time to define unique names for the resources created\n",
     "current_time = time.strftime(\"%m-%d-%H-%M-%S\", time.localtime())\n",
     "\n",
     "model_name = \"demo-hf-model\" + current_time\n",
     "endpoint_config_name = \"demo-hf-endpoint-config\" + current_time\n",
     "endpoint_name = \"demo-hf-endpoint-\" + current_time\n",
-    "\n",
     "function_name = \"sagemaker-demo-hf-lambda-step\" + current_time\n",
     "\n",
     "# Lambda helper class can be used to create the Lambda function\n",
@@ -469,15 +475,9 @@
     "# The dictionary retured by the Lambda function is captured by LambdaOutput, each key in the dictionary corresponds to a\n",
     "# LambdaOutput\n",
     "\n",
-    "output_param_1 = LambdaOutput(\n",
-    "    output_name=\"statusCode\", output_type=LambdaOutputTypeEnum.String\n",
-    ")\n",
-    "output_param_2 = LambdaOutput(\n",
-    "    output_name=\"body\", output_type=LambdaOutputTypeEnum.String\n",
-    ")\n",
-    "output_param_3 = LambdaOutput(\n",
-    "    output_name=\"other_key\", output_type=LambdaOutputTypeEnum.String\n",
-    ")\n",
+    "output_param_1 = LambdaOutput(output_name=\"statusCode\", output_type=LambdaOutputTypeEnum.String)\n",
+    "output_param_2 = LambdaOutput(output_name=\"body\", output_type=LambdaOutputTypeEnum.String)\n",
+    "output_param_3 = LambdaOutput(output_name=\"other_key\", output_type=LambdaOutputTypeEnum.String)\n",
     "\n",
     "# The inputs provided to the Lambda function can be retrieved via the `event` object within the `lambda_handler` function\n",
     "# in the Lambda\n",
@@ -499,7 +499,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Condition for deployment"
+    "## Condition for deployment\n",
+    "\n",
+    "For the condition to be True and the steps after evaluation to run, the evaluated loss of the Hugging Face model must be less than 0.3."
    ]
   },
   {
@@ -508,9 +510,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The evaluated loss of the hugging face model must be less than 0.3 for the condition to be True and the subsequent steps\n",
-    "# to run\n",
-    "\n",
     "cond_lte = ConditionLessThanOrEqualTo(\n",
     "    left=JsonGet(\n",
     "        step=step_eval,\n",
@@ -532,7 +531,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pipeline definition and execution"
+    "## Pipeline definition and execution\n",
+    "\n",
+    "SageMaker Pipelines constructs the pipeline graph from the implicit definition created by the way pipeline steps inputs and outputs are specified.  There's no need to specify that a step is a \"parallel\" or \"serial\" step.  Steps such as model registration after the condition step are not listed in the pipeline definition because they do not run unless the condition is true.  If so, they are run in order based on their specified inputs and outputs."
    ]
   },
   {
@@ -552,6 +553,13 @@
     "    steps=[step_process, step_train, step_eval, step_cond],\n",
     "    sagemaker_session=sagemaker_session,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can examine the pipeline definition in JSON format.  You also can inspect the pipeline graph in SageMaker Studio by going to the page for your pipeline.  "
    ]
   },
   {
@@ -596,9 +604,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prediction \n",
+    "## Getting predictions from the endpoint\n",
     "\n",
-    "After the previous cell completes, you can check whether the endpoint has finished deploying.  In SageMaker Studio, click on the tilted triange icon in the left toolbar, then select **Endpoints** in the drop down menu.  In the list of endpoints, click on the one with the name beginning `demo-hf-endpoint`, then click on **AWS settings**.  When the Status becomes InService, you can run the following code cells."
+    "After the previous cell completes, you can check whether the endpoint has finished deploying.  In SageMaker Studio, click on the tilted triange icon in the left toolbar, then select **Endpoints** in the drop down menu.  In the list of endpoints, click on the one with the name beginning `demo-hf-endpoint`, then click on **AWS settings**.  When the Status becomes InService, you can run the following code cells.\n",
+    "\n",
+    "### Setup \n",
+    "\n",
+    "We can use the endpoint name to set up a `Predictor` object that will be used to get predictions."
    ]
   },
   {
@@ -614,6 +626,15 @@
     "                                             sagemaker_session=sagemaker_session,\n",
     "                                             serializer=JSONSerializer(),\n",
     "                                             deserializer=JSONDeserializer() )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test data\n",
+    "\n",
+    "Here are a couple of sample reviews we would like to classify as positive (LABEL_1) or negative (LABEL_0).  Demonstrating the power of advanced Transformer-based models such as this Hugging Face model, the model should do quite well even though the reviews are mixed.  "
    ]
   },
   {
@@ -642,7 +663,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE: the code in this notebook is for real time (synchronous) rather than asynchronous endpoints.  To deploy an asynchronous endpoint, use the AWS console to create a Lambda function with a layer that includes the latest version of boto3.  In the Lambda helper function, supply the ARN of this function rather than the script defined above.  The Lambda step definition itself needs a couple of additional inputs, as shown below, for the S3 bucket and prefix.\n",
+    "### Examining the endpoint\n",
+    "\n",
+    "Once the endpoint is in service, there are several different ways to examine its current configuration and parameters.  One way is to use SageMaker Studio to examine the configuration.  In the left toolbar, click the tilted triangle icon, select **Endpoints** from the drop down menu at the top, then click the endpoint name (beginning `demo-hf-endpoint`).  Click the **AWS Settings** tab and you can review various endpoint metadata.\n",
+    "\n",
+    "Another way is to use the boto3 SDK for AWS.  You can use this to check certain other parameters, such as the current number of instances behind the endpoint.  This is done in the code cell below, and might be useful in circumstances such as when you need to do an ad hoc check on endpoint scaling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "endpoint_desc = sm_client.describe_endpoint(EndpointName=endpoint_name)\n",
+    "current_instance_count = endpoint_desc[\"ProductionVariants\"][0][\"CurrentInstanceCount\"]\n",
+    "print(f\"Current instance count = {current_instance_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Asynchronous vs. synchronous endpoints\n",
+    "\n",
+    "The code in this notebook is for real time (synchronous) rather than asynchronous endpoints.  To deploy an asynchronous endpoint, use the AWS console to create a Lambda function with a layer that includes the latest version of boto3.  First, change the Lambda step definition itself, which needs a couple of additional inputs, as shown below, for the S3 bucket and prefix.\n",
     "\n",
     "```python\n",
     "step_deploy_lambda = LambdaStep(\n",
@@ -710,7 +755,9 @@
     "        \"body\": json.dumps(\"Created Endpoint!\"),\n",
     "        \"other_key\": \"example_value\",\n",
     "    }\n",
-    "```"
+    "```\n",
+    "\n",
+    "In the Lambda helper function above, supply the ARN of this new function rather than the script defined above.  "
    ]
   },
   {
