generalize container retrieval code

--- a/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
+++ b/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
@@ -188,7 +188,7 @@
     "\n",
     "Use SageMaker's [Hugging Face](https://sagemaker.readthedocs.io/en/stable/frameworks/huggingface/sagemaker.huggingface.html) Estimator class to create a model training step for the Hugging Face [DistilBERT](https://huggingface.co/distilbert-base-uncased) model.  Transformer-based models such as the original BERT can be very large and slow to train.  DistilBERT, however, is a small, fast, cheap and light Transformer model trained by distilling BERT base. It reduces the size of a BERT model by 40%, while retaining 97% of its language understanding capabilities and being 60% faster. \n",
     "\n",
-    "In the cell below, ***REPLACE THE PREFIX OF THE CONTAINER URI*** with the one for your AWS Region, as found in the table https://github.com/aws/deep-learning-containers/blob/master/available_images.md.  In other words, if you're not running this notebook in the us-west-2 (Oregon) region, replace only the following portion of the URI:  `763104351884.dkr.ecr.us-west-2.amazonaws.com`."
+    "As a first step to constructing the estimator for our model training job, we'll look up the Hugging Face container for our AWS Region."
    ]
   },
   {
@@ -197,8 +197,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTE:  FOR REGIONS OTHER THAN US-WEST-2 (OREGON), REPLACE THIS URI WITH ONE FROM THE TABLE LINKED ABOVE !!!!\n",
-    "container = '763104351884.dkr.ecr.us-west-2.amazonaws.com/huggingface-pytorch-training:1.7.1-transformers4.6.1-gpu-py36-cu110-ubuntu18.04' "
+    "container = sagemaker.image_uris.retrieve(framework=\"huggingface\",\n",
+    "                                          region=boto3.Session().region_name,\n",
+    "                                          version=\"4.6.1\",\n",
+    "                                          py_version=\"py36\",\n",
+    "                                          base_framework_version=\"pytorch1.7.1\",\n",
+    "                                          instance_type=\"ml.p3.2xlarge\",\n",
+    "                                          image_scope=\"training\",\n",
+    "                                          container_version=\"cu110-ubuntu18.04\")\n",
+    "\n",
+    "print(container)"
    ]
   },
   {
