rewrite of inference code and Lambda handler function

--- a/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
+++ b/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
@@ -127,7 +127,7 @@
     "endpoint_instance_type = ParameterString(name=\"EndpointInstanceType\", default_value=\"ml.g4dn.xlarge\")\n",
     "\n",
     "output_destination = \"s3://{}/{}/data\".format(bucket, s3_prefix)\n",
-    "cache_config = CacheConfig(enable_caching=False, expire_after=\"30d\")\n",
+    "cache_config = CacheConfig(enable_caching=True, expire_after=\"30d\")\n",
     "model_package_group_name = \"HuggingFaceModelPackageGroup\""
    ]
   },
@@ -400,12 +400,10 @@
     "    endpoint_config_name = event[\"endpoint_config_name\"]\n",
     "    endpoint_name = event[\"endpoint_name\"]\n",
     "    role = event[\"role\"]\n",
-    "\n",
+    "    bucket = event[\"bucket\"]\n",
+    "    s3_prefix = event[\"s3_prefix\"]\n",
     "    container = {\"ModelPackageName\": model_package_arn}\n",
-    "\n",
-    "    create_model_respose = sm_client.create_model(\n",
-    "        ModelName=model_name, ExecutionRoleArn=role, Containers=[container]\n",
-    "    )\n",
+    "    create_model_respose = sm_client.create_model(ModelName=model_name, ExecutionRoleArn=role, Containers=[container] )\n",
     "\n",
     "    create_endpoint_config_response = sm_client.create_endpoint_config(\n",
     "        EndpointConfigName=endpoint_config_name,\n",
@@ -418,12 +416,17 @@
     "                \"VariantName\": \"AllTraffic\",\n",
     "            }\n",
     "        ],\n",
+    "        AsyncInferenceConfig={\n",
+    "            \"OutputConfig\": {\n",
+    "                \"S3OutputPath\": f\"s3://{bucket}/{s3_prefix}/output\",\n",
+    "            },\n",
+    "            \"ClientConfig\": {\n",
+    "                \"MaxConcurrentInvocationsPerInstance\": 4\n",
+    "            },\n",
+    "        },\n",
     "    )\n",
     "\n",
-    "    create_endpoint_response = sm_client.create_endpoint(\n",
-    "        EndpointName=endpoint_name, EndpointConfigName=endpoint_config_name\n",
-    "    )\n",
-    "\n",
+    "    create_endpoint_response = sm_client.create_endpoint(EndpointName=endpoint_name, EndpointConfigName=endpoint_config_name)\n",
     "    return {\n",
     "        \"statusCode\": 200,\n",
     "        \"body\": json.dumps(\"Created Endpoint!\"),\n",
@@ -498,9 +501,10 @@
     "        \"endpoint_name\": endpoint_name,\n",
     "        \"model_package_arn\": step_register.steps[0].properties.ModelPackageArn,\n",
     "        \"role\": role,\n",
+    "        \"bucket\": bucket,\n",
+    "        \"s3_prefix\": s3_prefix\n",
     "    },\n",
-    "    outputs=[output_param_1, output_param_2, output_param_3],\n",
-    ")"
+    "    outputs=[output_param_1, output_param_2, output_param_3] )"
    ]
   },
   {
@@ -618,7 +622,7 @@
     "\n",
     "### Setup \n",
     "\n",
-    "We can use the endpoint name to set up a `Predictor` object that will be used to get predictions."
+    "We'll use the SageMaker Runtime API to get predictions."
    ]
   },
   {
@@ -627,13 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sagemaker.deserializers import JSONDeserializer\n",
-    "from sagemaker.serializers import JSONSerializer\n",
-    "\n",
-    "hf_predictor = sagemaker.predictor.Predictor(endpoint_name, \n",
-    "                                             sagemaker_session=sagemaker_session,\n",
-    "                                             serializer=JSONSerializer(),\n",
-    "                                             deserializer=JSONDeserializer() )"
+    "sm_runtime = boto_session.client(\"sagemaker-runtime\")"
    ]
   },
   {
@@ -642,7 +640,7 @@
    "source": [
     "### Test data\n",
     "\n",
-    "Here are a couple of sample reviews we would like to classify as positive (LABEL_1) or negative (LABEL_0).  Demonstrating the power of advanced Transformer-based models such as this Hugging Face model, the model should do quite well even though the reviews are mixed.  "
+    "Here are a couple of sample reviews.  For asynchronous endpoints, the data for inference must be in S3, so we'll upload the reviews to S3 first."
    ]
   },
   {
@@ -651,9 +649,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment_input1 = {\"inputs\":\"Although the movie had some plot weaknesses, it was engaging. Special effects were mind boggling.  Can't wait to see what this creative team does next.\"}\n",
+    "item_1 = {\"inputs\":\"Although the movie had some plot weaknesses, it was engaging. Special effects were mind boggling.  Can't wait to see what this creative team does next.\"}\n",
     "\n",
-    "hf_predictor.predict(sentiment_input1)"
+    "item_2 = {\"inputs\":\"There was some good acting, but the story was ridiculous. The other sequels in this franchise were better.  It's time to take a break from this IP, but if they switch it up for the next one, I'll check it out.\"}\n",
+    "\n",
+    "with open(\"test_1.json\", 'w') as f:\n",
+    "    f.write(json.dumps(item_1))\n",
+    "with open(\"test_2.json\", 'w') as f:\n",
+    "    f.write(json.dumps(item_2))\n",
+    "    \n",
+    "s3_item_1 = sagemaker_session.upload_data(path = 'test_1.json', bucket = bucket, key_prefix = s3_prefix)\n",
+    "s3_item_2 = sagemaker_session.upload_data(path = 'test_2.json', bucket = bucket, key_prefix = s3_prefix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Predictions\n",
+    "\n",
+    "With the inference data in S3, we can now invoke the endpoint to classify the data as positive (LABEL_1) or negative (LABEL_0) sentiment. Demonstrating the power of advanced Transformer-based models such as this Hugging Face model, the model should do quite well even though the sentiment of the reviews is somewhat mixed.  We'll start with the first review, which should lean towards positive sentiment."
    ]
   },
   {
@@ -662,9 +677,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment_input2 = {\"inputs\":\"There was some good acting, but the story was ridiculous. The other sequels in this franchise were better.  It's time to take a break from this IP, but if they switch it up for the next one, I'll check it out.\"}\n",
+    "response_1 = sm_runtime.invoke_endpoint_async(\n",
+    "    EndpointName=endpoint_name,\n",
+    "    InputLocation=s3_item_1,\n",
+    "    ContentType=\"application/json\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
     "\n",
-    "hf_predictor.predict(sentiment_input2)"
+    "out_prefix = 'hugging-face-pipeline-demo/output/'\n",
+    "out_file_1 = re.search('output\\/(.*)$', str(response_1['OutputLocation'])).group(1)\n",
+    "sagemaker_session.download_data(path = './test_1_output', bucket = bucket, key_prefix = out_prefix + out_file_1)\n",
+    "with open('./test_1_output/' + os.listdir('./test_1_output')[0]) as f:\n",
+    "    for line in f:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'll generate a prediction for the second review."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_2 = sm_runtime.invoke_endpoint_async(\n",
+    "    EndpointName=endpoint_name,\n",
+    "    InputLocation=s3_item_2,\n",
+    "    ContentType=\"application/json\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_file_2 = re.search('output\\/(.*)$', str(response_2['OutputLocation'])).group(1)\n",
+    "sagemaker_session.download_data(path = './test_2_output', bucket = bucket, key_prefix = out_prefix + out_file_2)\n",
+    "with open('./test_2_output/' + os.listdir('./test_2_output')[0]) as f:\n",
+    "    for line in f:\n",
+    "        print(line)"
    ]
   },
   {
@@ -695,77 +761,30 @@
    "source": [
     "### Asynchronous vs. synchronous endpoints\n",
     "\n",
-    "The code in this notebook is for real time (synchronous) rather than asynchronous endpoints.  To deploy an asynchronous endpoint, use the AWS console to create a Lambda function with a layer that includes the latest version of boto3.  First, change the Lambda step definition itself, which needs a couple of additional inputs, as shown below, for the S3 bucket and prefix.\n",
-    "\n",
-    "```python\n",
-    "step_deploy_lambda = LambdaStep(\n",
-    "    name=\"LambdaStepHuggingFaceDeploy\",\n",
-    "    lambda_func=func,\n",
-    "    inputs={\n",
-    "        \"model_name\": model_name,\n",
-    "        \"endpoint_config_name\": endpoint_config_name,\n",
-    "        \"endpoint_name\": endpoint_name,\n",
-    "        \"model_package_arn\": step_register.steps[0].properties.ModelPackageArn,\n",
-    "        \"role\": role,\n",
-    "        \"bucket\": bucket,\n",
-    "        \"s3_prefix\": s3_prefix\n",
-    "    },\n",
-    "    outputs=[output_param_1, output_param_2, output_param_3] )\n",
-    "```"
+    "The code in this notebook is for asynchronous endpoints, rather than real time (synchronous) endpoints.  To deploy a synchronous endpoint, first change the Lambda step definition itself, which no longer needs additional inputs for the S3 bucket and prefix."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Lambda function script to upload in the console is similar to the one in the lambda_deployer.py script above, with the following modified handler function.  The primary modifications are adding references to the S3 bucket and prefix, and an `AsyncInferenceConfig` to indicate that an asynchronous endpoint is desired and to specify its parameters.\n",
+    "It also is necessary to modify the Lambda function script.  The primary modifications are removing references to the S3 bucket and prefix, and the `AsyncInferenceConfig`.\n",
+    "\n",
+    "To invoke the endpoint, simply wrap the endpoint in a SageMaker `Predictor` object, then invoke the endpoint with the `predict` method, passing the payload as a method argument rather than as a S3 location:  \n",
     "\n",
     "```python\n",
-    "def lambda_handler(event, context):\n",
-    "    \"\"\" \"\"\"\n",
-    "    sm_client = boto3.client(\"sagemaker\")\n",
+    "from sagemaker.deserializers import JSONDeserializer\n",
+    "from sagemaker.serializers import JSONSerializer\n",
     "\n",
-    "    # The name of the model created in the Pipeline CreateModelStep\n",
-    "    model_name = event[\"model_name\"]\n",
-    "    model_package_arn = event[\"model_package_arn\"]\n",
-    "    endpoint_config_name = event[\"endpoint_config_name\"]\n",
-    "    endpoint_name = event[\"endpoint_name\"]\n",
-    "    role = event[\"role\"]\n",
-    "    bucket = event[\"bucket\"]\n",
-    "    s3_prefix = event[\"s3_prefix\"]\n",
-    "    container = {\"ModelPackageName\": model_package_arn}\n",
-    "    create_model_respose = sm_client.create_model(ModelName=model_name, ExecutionRoleArn=role, Containers=[container] )\n",
+    "hf_predictor = sagemaker.predictor.Predictor(endpoint_name, \n",
+    "                                             sagemaker_session=sagemaker_session,\n",
+    "                                             serializer=JSONSerializer(),\n",
+    "                                             deserializer=JSONDeserializer() )\n",
     "\n",
-    "    create_endpoint_config_response = sm_client.create_endpoint_config(\n",
-    "        EndpointConfigName=endpoint_config_name,\n",
-    "        ProductionVariants=[\n",
-    "            {\n",
-    "                \"InstanceType\": \"ml.m5.xlarge\",\n",
-    "                \"InitialVariantWeight\": 1,\n",
-    "                \"InitialInstanceCount\": 1,\n",
-    "                \"ModelName\": model_name,\n",
-    "                \"VariantName\": \"AllTraffic\",\n",
-    "            }\n",
-    "        ],\n",
-    "        AsyncInferenceConfig={\n",
-    "            \"OutputConfig\": {\n",
-    "                \"S3OutputPath\": f\"s3://{bucket}/{s3_prefix}/output\",\n",
-    "            },\n",
-    "            \"ClientConfig\": {\n",
-    "                \"MaxConcurrentInvocationsPerInstance\": 4\n",
-    "            },\n",
-    "        },\n",
-    "    )\n",
+    "sentiment_input1 = {\"inputs\":\"Although the movie had some plot weaknesses, it was engaging. Special effects were mind boggling.  Can't wait to see what this creative team does next.\"}\n",
     "\n",
-    "    create_endpoint_response = sm_client.create_endpoint(EndpointName=endpoint_name, EndpointConfigName=endpoint_config_name)\n",
-    "    return {\n",
-    "        \"statusCode\": 200,\n",
-    "        \"body\": json.dumps(\"Created Endpoint!\"),\n",
-    "        \"other_key\": \"example_value\",\n",
-    "    }\n",
-    "```\n",
-    "\n",
-    "In the Lambda helper function above, supply the ARN of this new function rather than the script defined above.  "
+    "hf_predictor.predict(sentiment_input1)\n",
+    "```"
    ]
   },
   {
